change name to nano-php

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "azettl/nanoPHP",
-  "description": "The nanoPHP class replaces placeholders in a string with values from an array.",
+  "name": "azettl/nano-php",
+  "description": "The nano-php class replaces placeholders in a string with values from an array.",
   "require": {
     "php": "^7.1"
   }
